# powerbi-ontology-extractor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HABR_ARTICLE.md  MANIFEST.in  MEDIUM_ARTICLE.md  PUBLISH_TO_GITHUB.md  README.md  USER_GUIDE.md  generate_article_pdf.py  ontology_editor.py  pyproject.toml  pytest.ini  requirements.txt  run_editor.sh  setup.py
config/: mcp_config.yaml
docs/: GITHUB_SETUP.md
evaluation/: results.json  run_evaluation.py
examples/: detect_semantic_conflicts.py  sample_ontology.json
powerbi_ontology/: __init__.py  chat.py  cli.py  dax_parser.py  extractor.py  mcp_config.py  mcp_models.py  mcp_server.py  ontology_diff.py  review.py  semantic_debt.py
powerbi_ontology/export/: __init__.py  contract_to_owl.py  fabric_iq_to_owl.py  owl.py
powerbi_ontology/utils/: __init__.py  pbix_reader.py
tests/: test_cli.py  test_dax_parser.py  test_mcp_server.py  test_ontology_diff.py  test_pbix_reader.py  test_review.py  test_schema_mapper.py  test_semantic_debt.py
tests/test_e2e/: __init__.py  test_contract_ontoguard_integration.py
tests/test_exports/: test_contract_to_owl.py  test_fabric_iq_to_owl.py  test_owl_export.py
