[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbi-ontology-extractor"
version = "0.1.0"
description = "Extract semantic intelligence from Power BI .pbix files and convert to formal ontologies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PowerBI Ontology Extractor Contributors"}
]
keywords = [
    "powerbi",
    "ontology",
    "semantic-model",
    "dax",
    "fabric-iq",
    "ontoguard",
    "ai-agents",
    "business-intelligence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "pyparsing>=3.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "rdflib>=6.3.0",
    "jsonschema>=4.17.0",
    "pyyaml>=6.0",
    "pbixray>=0.5.0",
    "fastmcp>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/vpakspace/powerbi-ontology-extractor"
Documentation = "https://github.com/vpakspace/powerbi-ontology-extractor#readme"
Repository = "https://github.com/vpakspace/powerbi-ontology-extractor"
Issues = "https://github.com/vpakspace/powerbi-ontology-extractor/issues"
Changelog = "https://github.com/vpakspace/powerbi-ontology-extractor/blob/main/CHANGELOG.md"

[project.scripts]
pbi-ontology = "powerbi_ontology.cli:main"
pbix2owl = "powerbi_ontology.cli:main"
powerbi-ontology-mcp = "powerbi_ontology.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["powerbi_ontology*", "cli*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=powerbi_ontology",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "critical: marks critical tests (e.g., $4.6M prevention)",
]

[tool.coverage.run]
source = ["powerbi_ontology"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
